
8/19/05 (Brian Gladman)
  * Lots of changes to restore broken VC++ compilation

8/19/05 (relf)
  * common code from lasieve4/ and pol5/ moved to src/ and shared
  * extra types definitions removed in favor of #including ggnfs.h
  * pol5 fixed with respect to suppost non-i386 platforms
  * most "(unsigned) long long" types changed to "(u)int64_t"
  * TODO: unify used types, e.g., use the same name for "u64", "u64_t", "uint64_t" etc.
  * compiled binaries are placed in bin/ directory

8/18/05 (asl)
  * Added some small snfs_test. tst250 runs something about 30 mins for me,
    so some quick test is required (F7 is still broken :)
    Thanks to Dmitriy Gribenko for .poly file.
  * Applied matbuild fixes to matbuild-tpie.

8/18/05 (trilliwig)
  * Updated Perl script to properly handle the knowndiv option from the
    .poly file when checking if sqrt has found all the prime divisors of N.
  * Removed include/version.h from repository.  A 'make' from the top-level
    directory should recreate it.

8/17/05 (asl)
  * Fixed mingw32 miscompilation.

8/17/05 (relf)
  * "out-of-box" support for x86_64 target
  * target can be specified in the master Makefile
  * fixed some minor problem with makefiles
  * some missed #include's recovered
  * major problems w/ gcc 4.0 compilation resolved
  * extra "%l" specificators removed
  * type conversion applied to printf() arguments where required 
  * implicit function declarations made explicit
  * other minor issues fixed

8/15/05 (frmky)
  * Fixed a small typo in combparts_tpie.cpp.

8/12/05 (asl)
  * Fixed mingw32 miscompilation.
  * Changed "%lu" to PRIu32.
  * Integrated matbuild-tpie experimental package. Please read
    matbuild-tpie.txt in the experimental/ directory.
  * Some changes in optimization parameters. Added -ffast-math and
    increased function size for inlining. Got some speed-up.

8/10/05 (Brian Gladman)
  * Updated various files to repair the broken VC++ compilation