@@ -28,7 +28,7 @@ Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 @
 @(siever-config.h@>=
 #if 1
-#define BIGENDIAN
+#define GGNFS_BIGENDIAN
 #endif
 
 @ Use this if your compile cannot handle inline funtions.
